last_execution.log
Processing cul32-c6 (platform: espressif32; board: esp32-c6-devkitc-1; framework: espidf)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-c6-devkitc-1.html
PLATFORM: Espressif 32 (55.3.37) > Espressif ESP32-C6-DevKitC-1
HARDWARE: ESP32C6 160MHz, 320KB RAM, 8MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-builtin, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-espidf @ 3.50502.0 (5.5.2) 
 - tool-cmake @ 4.0.3 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.2 
 - tool-ninja @ 1.13.1 
 - tool-scons @ 4.40801.0 (4.8.1) 
 - toolchain-riscv32-esp @ 14.2.0+20251107
Reading CMake configuration...
Warning! Flash memory size mismatch detected. Expected 8MB, found 2MB!
Please select a proper value in your `sdkconfig.defaults` or via the `menuconfig` target!
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 0 compatible libraries
Scanning dependencies...
No dependencies
Building in release mode
Compiling .pio/build/cul32-c6/src/cc1101.c.o
src/cc1101.c: In function 'cc1101_init':
src/cc1101.c:95:5: error: implicit declaration of function 'cc1101_write_burst'; did you mean 'cc1101_write_reg'? [-Wimplicit-function-declaration]
   95 |     cc1101_write_burst(0x3E, patable, 2);
      |     ^~~~~~~~~~~~~~~~~~
      |     cc1101_write_reg
src/cc1101.c: At top level:
src/cc1101.c:183:11: error: conflicting types for 'cc1101_write_burst'; have 'esp_err_t(uint8_t,  const uint8_t *, size_t)' {aka 'int(unsigned char,  const unsigned char *, unsigned int)'}
  183 | esp_err_t cc1101_write_burst(uint8_t reg, const uint8_t *data, size_t len) {
      |           ^~~~~~~~~~~~~~~~~~
src/cc1101.c:183:1: note: an argument type that has a default promotion cannot match an empty parameter name list declaration
  183 | esp_err_t cc1101_write_burst(uint8_t reg, const uint8_t *data, size_t len) {
      | ^~~~~~~~~
src/cc1101.c:95:5: note: previous implicit declaration of 'cc1101_write_burst' with type 'int()'
   95 |     cc1101_write_burst(0x3E, patable, 2);
      |     ^~~~~~~~~~~~~~~~~~
*** [.pio/build/cul32-c6/src/cc1101.c.o] Error 1
========================== [FAILED] Took 8.72 seconds ==========================
